--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="">
   <head>
     <!-- The first thing in any HTML file should be the charset -->
     <meta charset="utf-8">
