--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <link rel="manifest" href="manifest.json">
     <meta name="mobile-web-app-capable" content="yes">
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Galada" rel="stylesheet">
     <title>React.js Boilerplate</title>
   </head>
   <body>
