--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,9 @@
     <meta name="mobile-web-app-capable" content="yes">
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Galada" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
     <title>React.js Boilerplate</title>
   </head>
   <body>
