layout for article page mostly finished and responsive in mobile and laptop view need to put article page stylings into reusable components to create the other articles

--- a/app/index.html
+++ b/app/index.html
@@ -9,11 +9,20 @@
     <link rel="manifest" href="manifest.json">
     <meta name="mobile-web-app-capable" content="yes">
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
-    
+
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css?family=Cormorant" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
+
+<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
     <title>React.js Boilerplate</title>
   </head>
   <body>
